implement strong connectivity testers

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,6 @@
 .PHONY: all clean
 
-all: slgraph_test slgraph_copy slgraph_convert slgraph_load_edgelist
+all: slgraph_test slgraph_copy slgraph_convert slgraph_load_edgelist slgraph_tester_basic slgraph_tester_improved
 
 LIBFILES = ../include/slgraph.h ../src/slgraph.c
 
@@ -20,3 +20,9 @@ slgraph_convert: convert.c $(LIBFILES)
 
 slgraph_load_edgelist: load_edgelist.c $(LIBFILES)
 	gcc  -O2 -pedantic --std=c11 -D_POSIX_C_SOURCE=200809L -I../include ../src/slgraph.c load_edgelist.c -o slgraph_load_edgelist
+
+slgraph_tester_basic: tester_sc_basic.c $(LIBFILES)
+	gcc  -O2 -pedantic --std=c11 -D_POSIX_C_SOURCE=200809L -I../include ../src/slgraph.c tester_sc_basic.c -o slgraph_tester_basic -lm
+
+slgraph_tester_improved: tester_sc_improved.c $(LIBFILES)
+	gcc  -O2 -pedantic --std=c11 -D_POSIX_C_SOURCE=200809L -I../include ../src/slgraph.c tester_sc_improved.c -o slgraph_tester_improved -lm
